Colab을 통해 생성됨

--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOfUPIGqIVvARYWeVM9arg7",
+      "authorship_tag": "ABX9TyMIQShw+UORy7UCA0vHvi+1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,6 +33,15 @@
       ],
       "metadata": {
         "id": "ZCKlBqidBfwX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 기본 문법"
+      ],
+      "metadata": {
+        "id": "Yv0T2IThg5tH"
       }
     },
     {
@@ -152,6 +161,152 @@
           "name": "stdout",
           "text": [
             "나이 (문자열): 25, 키 (정수): 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "연산자(Operators)\n",
+        "\n",
+        "산술 연산자: +, -, *, /, //, %, **  \n",
+        "비교 연산자: ==, !=, >, <, >=, <=  \n",
+        "논리 연산자: and, or, not  "
+      ],
+      "metadata": {
+        "id": "-HdwtkJig-UZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "산술 연산자"
+      ],
+      "metadata": {
+        "id": "p3KpEapDhWA-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 10\n",
+        "b = 3\n",
+        "\n",
+        "print(\"Addition (+):\", a + b)      # 덧셈\n",
+        "print(\"Subtraction (-):\", a - b)   # 뺄셈\n",
+        "print(\"Multiplication (*):\", a * b)  # 곱셈\n",
+        "print(\"Division (/):\", a / b)      # 나눗셈\n",
+        "print(\"Floor Division (//):\", a // b)  # 몫 (정수 나눗셈)\n",
+        "print(\"Modulus (%):\", a % b)       # 나머지\n",
+        "print(\"Exponentiation (**):\", a ** b)  # 제곱\n"
+      ],
+      "metadata": {
+        "id": "j3opP4-chQzj",
+        "outputId": "505cfb46-1b6f-4e88-abb1-fa7e9caf872a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Addition (+): 13\n",
+            "Subtraction (-): 7\n",
+            "Multiplication (*): 30\n",
+            "Division (/): 3.3333333333333335\n",
+            "Floor Division (//): 3\n",
+            "Modulus (%): 1\n",
+            "Exponentiation (**): 1000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "비교 연산자 (Comparison Operators)  \n",
+        "비교 연산자는 두 값을 비교하여 참(True) 또는 거짓(False)을 반환합니다."
+      ],
+      "metadata": {
+        "id": "aZdR8DcqhX_e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 5\n",
+        "y = 10\n",
+        "\n",
+        "print(\"Equal to (==):\", x == y)    # 같은지 비교\n",
+        "print(\"Not equal to (!=):\", x != y)  # 같지 않은지 비교\n",
+        "print(\"Greater than (>):\", x > y)  # 큰지 비교\n",
+        "print(\"Less than (<):\", x < y)     # 작은지 비교\n",
+        "print(\"Greater than or equal to (>=):\", x >= y)  # 크거나 같은지 비교\n",
+        "print(\"Less than or equal to (<=):\", x <= y)  # 작거나 같은지 비교\n"
+      ],
+      "metadata": {
+        "id": "wf3IMq5jhcTh",
+        "outputId": "105c6831-7c90-4872-9c5d-59320d42a078",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Equal to (==): False\n",
+            "Not equal to (!=): True\n",
+            "Greater than (>): False\n",
+            "Less than (<): True\n",
+            "Greater than or equal to (>=): False\n",
+            "Less than or equal to (<=): True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "논리 연산자 (Logical Operators)  \n",
+        "논리 연산자는 여러 조건을 결합하여 참(True) 또는 거짓(False)을 반환합니다."
+      ],
+      "metadata": {
+        "id": "REif8UwIhfR3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = True\n",
+        "b = False\n",
+        "\n",
+        "print(\"Logical AND (and):\", a and b)  # 두 조건이 모두 참이면 참\n",
+        "print(\"Logical OR (or):\", a or b)    # 둘 중 하나라도 참이면 참\n",
+        "print(\"Logical NOT (not):\", not a)   # 참이면 거짓, 거짓이면 참\n"
+      ],
+      "metadata": {
+        "id": "Edqmkrjmhdc8",
+        "outputId": "721ca9d0-9789-4825-b2ac-1a0d29456c82",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Logical AND (and): False\n",
+            "Logical OR (or): True\n",
+            "Logical NOT (not): False\n"
           ]
         }
       ]
@@ -488,6 +643,72 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# 1부터 10까지의 숫자 중에서 홀수만 출력\n",
+        "i = 0\n",
+        "while i < 10:\n",
+        "    i += 1\n",
+        "    if i % 2 == 0:\n",
+        "        continue  # 짝수는 건너뜀\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "id": "TaFjqPsahngc",
+        "outputId": "8532eca7-ce2d-4358-95a9-2679899cfadb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# `break`를 사용하여 루프 중간에 종료\n",
+        "i = 1\n",
+        "while i <= 10:\n",
+        "    print(i)\n",
+        "    if i == 5:\n",
+        "        break  # i가 5일 때 루프를 종료\n",
+        "    i += 1"
+      ],
+      "metadata": {
+        "id": "Na7U_0i_hqo-",
+        "outputId": "942f7fd1-30a8-4ea0-e4ff-83312dce1c9f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "4. 리스트와 리스트 처리  \n",
@@ -591,6 +812,219 @@
           "text": [
             "정렬된 리스트: [1, 2, 3, 5, 6, 8]\n",
             "리스트의 처음 세 개 요소: [1, 2, 3]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "append()\n",
+        "리스트의 끝에 새로운 요소를 추가합니다."
+      ],
+      "metadata": {
+        "id": "6YfsPbRYhxsy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+        "fruits.append(\"orange\")\n",
+        "print(fruits)\n"
+      ],
+      "metadata": {
+        "id": "RLXxw27bhzqz",
+        "outputId": "9c0b3a7e-9d4f-44e3-bd7c-eae0ff799b92",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'banana', 'cherry', 'orange']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "insert()\n",
+        "지정한 위치에 요소를 삽입합니다."
+      ],
+      "metadata": {
+        "id": "5S_KA1j2h0RH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+        "fruits.insert(1, \"orange\")  # 인덱스 1에 'orange' 삽입\n",
+        "print(fruits)\n"
+      ],
+      "metadata": {
+        "id": "7IDh2E15h10C",
+        "outputId": "46d1bf67-3df2-441e-b78f-48e3ecff5382",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'orange', 'banana', 'cherry']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "extend()\n",
+        "다른 리스트나 반복 가능한 객체의 모든 요소를 리스트에 추가합니다."
+      ],
+      "metadata": {
+        "id": "o1qrhCbwh6Kr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = [\"apple\", \"banana\"]\n",
+        "more_fruits = [\"cherry\", \"orange\"]\n",
+        "fruits.extend(more_fruits)\n",
+        "print(fruits)"
+      ],
+      "metadata": {
+        "id": "p-mUlVaJh3n8",
+        "outputId": "5bd0cb8a-706f-4da0-a29f-ea9c0fb74921",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'banana', 'cherry', 'orange']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "remove()\n",
+        "리스트에서 첫 번째로 일치하는 요소를 제거합니다.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "BJ8vZmjAh9HO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = [\"apple\", \"banana\", \"cherry\", \"banana\"]\n",
+        "fruits.remove(\"banana\")\n",
+        "print(fruits)\n"
+      ],
+      "metadata": {
+        "id": "Fa8JrfRMiAe1",
+        "outputId": "7058aa15-c17e-43b0-d369-fad6c2aeb3bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'cherry', 'banana']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "pop()\n",
+        "지정한 인덱스에 있는 요소를 제거하고 반환합니다. 인덱스를 지정하지 않으면 마지막 요소를 제거하고 반환합니다."
+      ],
+      "metadata": {
+        "id": "ZUQ8jhxwiCwb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+        "fruit = fruits.pop(1)  # 인덱스 1의 요소를 제거하고 반환\n",
+        "print(fruits)  # ['apple', 'cherry']\n",
+        "print(fruit)   # 'banana'\n"
+      ],
+      "metadata": {
+        "id": "hth6G2WtiFep",
+        "outputId": "5c930b57-bfb3-4d64-efe3-2811a5540d73",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['apple', 'cherry']\n",
+            "banana\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "index()\n",
+        "리스트에서 특정 요소의 인덱스를 반환합니다. 해당 요소가 없으면 오류가 발생합니다."
+      ],
+      "metadata": {
+        "id": "VKuuwSrXiIoN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+        "print(fruits.index(\"cherry\"))"
+      ],
+      "metadata": {
+        "id": "ZmYSFOBUiLhX",
+        "outputId": "02b4ad01-39af-4254-aad1-671fab65bde5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
           ]
         }
       ]
@@ -995,7 +1429,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1055,7 +1489,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1122,7 +1556,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1191,7 +1625,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1242,7 +1676,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1343,7 +1777,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1406,7 +1840,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1461,7 +1895,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
