--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIQShw+UORy7UCA0vHvi+1",
+      "authorship_tag": "ABX9TyNcbaCfvfVngG/squ5Wv3pM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,11 +202,11 @@
         "print(\"Exponentiation (**):\", a ** b)  # 제곱\n"
       ],
       "metadata": {
-        "id": "j3opP4-chQzj",
-        "outputId": "505cfb46-1b6f-4e88-abb1-fa7e9caf872a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j3opP4-chQzj",
+        "outputId": "505cfb46-1b6f-4e88-abb1-fa7e9caf872a"
       },
       "execution_count": 9,
       "outputs": [
@@ -249,11 +249,11 @@
         "print(\"Less than or equal to (<=):\", x <= y)  # 작거나 같은지 비교\n"
       ],
       "metadata": {
-        "id": "wf3IMq5jhcTh",
-        "outputId": "105c6831-7c90-4872-9c5d-59320d42a078",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wf3IMq5jhcTh",
+        "outputId": "105c6831-7c90-4872-9c5d-59320d42a078"
       },
       "execution_count": 10,
       "outputs": [
@@ -292,11 +292,11 @@
         "print(\"Logical NOT (not):\", not a)   # 참이면 거짓, 거짓이면 참\n"
       ],
       "metadata": {
-        "id": "Edqmkrjmhdc8",
-        "outputId": "721ca9d0-9789-4825-b2ac-1a0d29456c82",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Edqmkrjmhdc8",
+        "outputId": "721ca9d0-9789-4825-b2ac-1a0d29456c82"
       },
       "execution_count": 11,
       "outputs": [
@@ -654,11 +654,11 @@
         "    print(i)"
       ],
       "metadata": {
-        "id": "TaFjqPsahngc",
-        "outputId": "8532eca7-ce2d-4358-95a9-2679899cfadb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TaFjqPsahngc",
+        "outputId": "8532eca7-ce2d-4358-95a9-2679899cfadb"
       },
       "execution_count": 14,
       "outputs": [
@@ -687,11 +687,11 @@
         "    i += 1"
       ],
       "metadata": {
-        "id": "Na7U_0i_hqo-",
-        "outputId": "942f7fd1-30a8-4ea0-e4ff-83312dce1c9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Na7U_0i_hqo-",
+        "outputId": "942f7fd1-30a8-4ea0-e4ff-83312dce1c9f"
       },
       "execution_count": 13,
       "outputs": [
@@ -834,11 +834,11 @@
         "print(fruits)\n"
       ],
       "metadata": {
-        "id": "RLXxw27bhzqz",
-        "outputId": "9c0b3a7e-9d4f-44e3-bd7c-eae0ff799b92",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RLXxw27bhzqz",
+        "outputId": "9c0b3a7e-9d4f-44e3-bd7c-eae0ff799b92"
       },
       "execution_count": 15,
       "outputs": [
@@ -869,11 +869,11 @@
         "print(fruits)\n"
       ],
       "metadata": {
-        "id": "7IDh2E15h10C",
-        "outputId": "46d1bf67-3df2-441e-b78f-48e3ecff5382",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7IDh2E15h10C",
+        "outputId": "46d1bf67-3df2-441e-b78f-48e3ecff5382"
       },
       "execution_count": 16,
       "outputs": [
@@ -905,11 +905,11 @@
         "print(fruits)"
       ],
       "metadata": {
-        "id": "p-mUlVaJh3n8",
-        "outputId": "5bd0cb8a-706f-4da0-a29f-ea9c0fb74921",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p-mUlVaJh3n8",
+        "outputId": "5bd0cb8a-706f-4da0-a29f-ea9c0fb74921"
       },
       "execution_count": 18,
       "outputs": [
@@ -941,11 +941,11 @@
         "print(fruits)\n"
       ],
       "metadata": {
-        "id": "Fa8JrfRMiAe1",
-        "outputId": "7058aa15-c17e-43b0-d369-fad6c2aeb3bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Fa8JrfRMiAe1",
+        "outputId": "7058aa15-c17e-43b0-d369-fad6c2aeb3bb"
       },
       "execution_count": 19,
       "outputs": [
@@ -977,11 +977,11 @@
         "print(fruit)   # 'banana'\n"
       ],
       "metadata": {
-        "id": "hth6G2WtiFep",
-        "outputId": "5c930b57-bfb3-4d64-efe3-2811a5540d73",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hth6G2WtiFep",
+        "outputId": "5c930b57-bfb3-4d64-efe3-2811a5540d73"
       },
       "execution_count": 21,
       "outputs": [
@@ -1012,11 +1012,11 @@
         "print(fruits.index(\"cherry\"))"
       ],
       "metadata": {
-        "id": "ZmYSFOBUiLhX",
-        "outputId": "02b4ad01-39af-4254-aad1-671fab65bde5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZmYSFOBUiLhX",
+        "outputId": "02b4ad01-39af-4254-aad1-671fab65bde5"
       },
       "execution_count": 22,
       "outputs": [
@@ -1025,6 +1025,134 @@
           "name": "stdout",
           "text": [
             "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "count()\n",
+        "리스트에서 특정 요소가 몇 번 나타나는지 반환합니다.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "E3pEgP7wiTYg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = [\"apple\", \"banana\", \"cherry\", \"apple\"]\n",
+        "print(fruits.count(\"apple\"))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TKe8Z_WUiUkh",
+        "outputId": "e084b511-7a96-4cbb-882e-6b2c3b8b2d8d"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "sort()\n",
+        "리스트의 요소를 오름차순으로 정렬합니다. 역순으로 정렬하려면 reverse=True 옵션을 사용할 수 있습니다."
+      ],
+      "metadata": {
+        "id": "xIOWPPCniW36"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [3, 1, 4, 1, 5, 9]\n",
+        "numbers.sort()\n",
+        "print(numbers)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UkwK3sL_iYaF",
+        "outputId": "59e0d790-b9ae-4d29-8732-14a9a044e05b"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 1, 3, 4, 5, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers.sort(reverse=True)\n",
+        "print(numbers)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "17D_ARu3iZpz",
+        "outputId": "383e45eb-e342-42b6-ec01-18f197d9b530"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[9, 5, 4, 3, 1, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "len()\n",
+        "리스트의 길이(요소의 개수)를 반환합니다. (내장 함수)"
+      ],
+      "metadata": {
+        "id": "L1cDGuexicIo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = [\"apple\", \"banana\", \"cherry\"]\n",
+        "print(len(fruits))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gV7U3V9Didx1",
+        "outputId": "164c8faa-1d0e-4d6b-afa2-b1732fc78755"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
           ]
         }
       ]
@@ -1076,6 +1204,111 @@
             "banana\n",
             "(2, 3)\n",
             "(1, 2, 3, 'apple', 'banana', 'cherry')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "count()\n",
+        "튜플 내에서 특정 요소가 몇 번 등장하는지 반환합니다."
+      ],
+      "metadata": {
+        "id": "AzxgUlBPiiOM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# count() 예시\n",
+        "fruits = (\"apple\", \"banana\", \"cherry\", \"apple\", \"apple\")\n",
+        "print(fruits.count(\"apple\"))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gPeCbnp-iixY",
+        "outputId": "03138e88-e8e0-4f67-81fa-0c0d76109444"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "index()\n",
+        "튜플 내에서 특정 요소의 첫 번째 인덱스를 반환합니다. 해당 요소가 없으면 오류가 발생합니다."
+      ],
+      "metadata": {
+        "id": "gfwfrthdikGx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# index() 예시\n",
+        "fruits = (\"apple\", \"banana\", \"cherry\")\n",
+        "print(fruits.index(\"banana\"))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ihhzz47cireI",
+        "outputId": "e148746f-06ff-4e32-e3ab-dd6e6c6d10e1"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "튜플의 len() (내장 함수)\n",
+        "튜플의 길이(요소의 개수)를 반환합니다."
+      ],
+      "metadata": {
+        "id": "7RmQOLYmio5R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# len() 예시\n",
+        "fruits = (\"apple\", \"banana\", \"cherry\")\n",
+        "print(len(fruits))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GHAlTtW-it8e",
+        "outputId": "820643d8-adbb-41fa-b6ae-7ff5c66380c5"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
           ]
         }
       ]
