Colab을 통해 생성됨

--- a/Python_Numpy.ipynb
+++ b/Python_Numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1SojBRtXFigni9D+AcwAs",
+      "authorship_tag": "ABX9TyMoP9dCa7MFfHe0xEF3oJ91",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1338,7 +1338,7 @@
         "id": "g9BsBH_Qtzhx",
         "outputId": "ef1596c8-8d1c-4252-d96d-2e4f78071336"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1376,7 +1376,7 @@
         "id": "qgRWOORRt7SY",
         "outputId": "c05f5a2a-1a0a-463e-a82d-93f667a65a89"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1414,7 +1414,7 @@
         "id": "sXyh6OuZuCz6",
         "outputId": "5baf9756-7aa5-4f92-bbff-26cc8dcc9314"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1564,7 +1564,7 @@
         "id": "lfy4m9nlu5p_",
         "outputId": "0d7b8837-1121-4943-ba92-d1ae40e82334"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1599,7 +1599,7 @@
         "id": "glZlToI0u9sC",
         "outputId": "0bc080da-716c-40f4-e8ec-23144dcac9a9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1633,7 +1633,7 @@
         "id": "o2-pwBQQvAka",
         "outputId": "51194c8a-56a7-4c96-8471-13a6946a3676"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1667,7 +1667,7 @@
         "id": "-3pVkU5WvD_L",
         "outputId": "43a169c7-47de-4489-db0d-efcd1671cb81"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1702,7 +1702,7 @@
         "id": "CK7_RbZwvHzN",
         "outputId": "1410a53d-7284-4e7e-b10a-f906ea7ab910"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1739,7 +1739,7 @@
         "id": "IM8uiHD5vKSE",
         "outputId": "d0757e7e-c7b9-47f3-8013-ca8a305dae2b"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1775,7 +1775,7 @@
         "id": "Rh3cg-c3vNvY",
         "outputId": "3ad11c3f-e32a-4314-e82b-2d939f5bf8bc"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1823,7 +1823,7 @@
         "id": "DUTPp1XOwJCX",
         "outputId": "8c65dbaa-c39d-4601-d8af-a681fe7945ac"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1858,7 +1858,7 @@
         "id": "YHPHdSRnwMBi",
         "outputId": "a7979eb6-84ab-48a9-c050-277415e536eb"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1894,7 +1894,7 @@
         "id": "C_2JmsYowRLO",
         "outputId": "9c64c4b6-7d9d-4d69-8303-ae2422a7cbec"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1935,7 +1935,7 @@
         "id": "W_5BDtRZBvlS",
         "outputId": "8742b3ae-f62e-473a-ad69-8dbddda17ddd"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1964,7 +1964,7 @@
         "id": "yL6A5R9MCkox",
         "outputId": "624399cd-7f96-4da6-c3a1-55764f4e5487"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1992,7 +1992,7 @@
         "id": "QwpL03NoClxT",
         "outputId": "b0e8be0e-715d-4f85-f8d4-2679a1c07f1c"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2031,7 +2031,7 @@
         "id": "VmlWp8a9weWq",
         "outputId": "bcef96ad-c7bd-4cbe-b1a0-0bf7919a91da"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2070,7 +2070,7 @@
         "id": "oxSqDVXPwq-f",
         "outputId": "a22bd109-f984-41d9-f783-627fce58d20d"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2111,7 +2111,7 @@
         "id": "_s6zgVpNwuZP",
         "outputId": "92012b86-a7b6-4ff0-9bc0-76fc78995300"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2149,7 +2149,7 @@
         "id": "Likp_mPdwyV0",
         "outputId": "4694e7c3-8136-40cc-fb90-14cca833da2f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2192,7 +2192,7 @@
         "id": "YxBnEuWow2zO",
         "outputId": "58d2ec1b-d9a6-4a2c-fe0a-5a0105d05357"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2229,7 +2229,7 @@
         "id": "qqgQEeoew5Yn",
         "outputId": "a3a59f5a-1223-4ef5-95da-1fb8aaf9156e"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2270,7 +2270,7 @@
         "id": "XHBA8sEFw9uc",
         "outputId": "52dab921-1673-4672-ba3a-3e5f0af893fa"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2317,7 +2317,7 @@
         "id": "tKny6lnhxFDi",
         "outputId": "adecba12-d35f-4225-eb3d-aa279e9334f4"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2395,7 +2395,7 @@
       "metadata": {
         "id": "OmGNsYv70u8t"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2426,7 +2426,7 @@
         "id": "e8wzJj2e0xrf",
         "outputId": "a3292e36-e016-4956-929c-3f71498c76b3"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2466,7 +2466,7 @@
         "id": "081m6yEd06LM",
         "outputId": "8427724a-c134-4159-b4ad-0a91dcec1f89"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2508,7 +2508,7 @@
         "id": "3SvzZu2p0_e0",
         "outputId": "524b807c-e891-45b6-a95b-3d4758bda435"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2546,7 +2546,7 @@
       "metadata": {
         "id": "lIuezg2p1IJt"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2576,7 +2576,7 @@
         "id": "j2FRRKg51LhV",
         "outputId": "bd90fecd-e495-47d2-931b-76711f49236c"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3167,6 +3167,64 @@
     {
       "cell_type": "markdown",
       "source": [
+        "간단 예제"
+      ],
+      "metadata": {
+        "id": "f0iMagqd_GIK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Car 클래스를 정의\n",
+        "class Car:\n",
+        "    # 클래스 초기화 메서드, 객체가 생성될 때 호출\n",
+        "    def __init__(self, make, model, color):\n",
+        "        self.make = make    # 자동차 제조사\n",
+        "        self.model = model  # 자동차 모델\n",
+        "        self.color = color  # 자동차 색상\n",
+        "        self.speed = 0      # 초기 속도는 0\n",
+        "\n",
+        "    # 자동차 정보를 출력하는 메서드\n",
+        "    def car_info(self):\n",
+        "        print(f\"Make: {self.make}, Model: {self.model}, Color: {self.color}, Speed: {self.speed} km/h\")\n",
+        "\n",
+        "    # 자동차 가속 메서드\n",
+        "    def accelerate(self, amount):\n",
+        "        self.speed += amount\n",
+        "        print(f\"The car has accelerated by {amount} km/h. Current speed: {self.speed} km/h\")\n",
+        "\n",
+        "    # 자동차 감속 메서드\n",
+        "    def brake(self, amount):\n",
+        "        self.speed -= amount\n",
+        "        if self.speed < 0:\n",
+        "            self.speed = 0\n",
+        "        print(f\"The car has decelerated by {amount} km/h. Current speed: {self.speed} km/h\")\n",
+        "\n",
+        "# Car 클래스의 객체 생성\n",
+        "my_car = Car(\"Tesla\", \"Model S\", \"Red\")\n",
+        "\n",
+        "# 자동차 정보 출력\n",
+        "my_car.car_info()\n",
+        "\n",
+        "# 자동차 가속\n",
+        "my_car.accelerate(30)\n",
+        "\n",
+        "# 자동차 감속\n",
+        "my_car.brake(10)\n",
+        "\n",
+        "# 자동차 정보 다시 출력\n",
+        "my_car.car_info()"
+      ],
+      "metadata": {
+        "id": "HW_2w12-_INY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## 11. 예외처리  \n",
         "Python에서 예외가 발생할 경우 프로그램이 중단되지 않도록 처리할 수 있습니다. try, except, finally를 사용합니다."
       ],
@@ -3255,7 +3313,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3307,7 +3365,7 @@
         },
         "outputId": "065cc733-7575-4a0a-d6aa-8c034b12de9c"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3357,7 +3415,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3416,7 +3474,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3474,7 +3532,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3531,7 +3589,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3590,7 +3648,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3637,7 +3695,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3685,7 +3743,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
