Colab을 통해 생성됨

--- a/Linear_Classifier.ipynb
+++ b/Linear_Classifier.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKr9m2OD4/WlbWv90MTi2S",
+      "authorship_tag": "ABX9TyMynunMTiI3fFFX73ymFBXz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1381,7 +1381,7 @@
       "source": [
         "# 최종 테스트 데이터로 SVM 모델 평가\n",
         "svm = LinearSVM()\n",
-        "svm.train(X_train, y_train, learning_rate=1e-3, num_iters=100, verbose=True)\n"
+        "loss_hist = svm.train(X_train, y_train, learning_rate=1e-3, num_iters=100, verbose=True)\n"
       ],
       "metadata": {
         "colab": {
