Colab을 통해 생성됨

--- a/Python_Numpy.ipynb
+++ b/Python_Numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoP9dCa7MFfHe0xEF3oJ91",
+      "authorship_tag": "ABX9TyPwCf1h2U0gPvhOt+49P1x1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,13 @@
       "cell_type": "markdown",
       "source": [
         "## 1. 변수와 데이터 타입  \n",
-        "변수는 데이터를 저장하는 공간입니다. Python은 변수를 선언할 때 데이터 타입을 명시적으로 지정하지 않고, 값에 따라 타입을 자동으로 결정합니다."
+        "변수는 데이터를 저장하는 공간입니다. Python은 변수를 선언할 때 데이터 타입을 명시적으로 지정하지 않고, 값에 따라 타입을 자동으로 결정합니다(동적타이핑).  \n",
+        "\n",
+        "기본 데이터 타입\n",
+        "*  타입정수(int)\n",
+        "* 실수(float)\n",
+        "* 문자열(str)\n",
+        "* 불리언(bool)"
       ],
       "metadata": {
         "id": "aH-WlIi_BiPS"
@@ -169,10 +175,12 @@
       "cell_type": "markdown",
       "source": [
         "## 2.연산자(Operators)\n",
+        "Python에서 사용되는 연산자는 크게\n",
+        "산술 연산자, 비교 연산자, 논리 연산자, 등으로 나눌 수 있음.\n",
         "\n",
-        "산술 연산자: +, -, *, /, //, %, **  \n",
-        "비교 연산자: ==, !=, >, <, >=, <=  \n",
-        "논리 연산자: and, or, not  "
+        "* 산술 연산자: +, -, *, /, //, %, **  \n",
+        "* 비교 연산자: ==, !=, >, <, >=, <=  \n",
+        "* 논리 연산자: and, or, not  "
       ],
       "metadata": {
         "id": "-HdwtkJig-UZ"
@@ -712,7 +720,12 @@
       "cell_type": "markdown",
       "source": [
         "## 4. 리스트와 리스트 처리  \n",
-        "리스트는 여러 개의 값을 저장할 수 있는 자료형으로, 순서를 유지합니다. 리스트는 []로 정의됩니다."
+        "리스트는 여러 개의 값을 저장할 수 있는 자료형으로, 순서를 유지합니다. 리스트는 []로 정의됩니다.  \n",
+        "* 순서가 있는(Ordered) 데이터 구조\n",
+        "* 값이 변경 가능(Mutable)\n",
+        "* 다양한 데이터 타입을 혼합하여 저장 가능\n",
+        "* 주요 메서드\n",
+        "append(), remove(), sort(), len(), index()."
       ],
       "metadata": {
         "id": "XAm3IxyZBuOK"
@@ -1161,7 +1174,13 @@
       "cell_type": "markdown",
       "source": [
         "## 5. 튜플  \n",
-        "튜플은 리스트와 비슷하지만, 변경할 수 없는 자료형입니다. 튜플은 ()로 정의됩니다. 리스트보다 빠르며, 데이터가 고정적일 때 사용합니다."
+        "튜플은 리스트와 비슷하지만, 변경할 수 없는 자료형입니다. 튜플은 ()로 정의됩니다. 리스트보다 빠르며, 데이터가 고정적일 때 사용합니다.\n",
+        "* 특징순서가 있는 데이터 구조\n",
+        "* 값이 불변(Immutable)\n",
+        "* 리스트보다 메모리 효율적   \n",
+        "\n",
+        "\n",
+        "튜플은 간단한 구조 때문에 지원하는 메서드가 제한적임"
       ],
       "metadata": {
         "id": "C8xSgIeAC607"
@@ -1429,7 +1448,12 @@
       "cell_type": "markdown",
       "source": [
         "## 6. 딕셔너리  \n",
-        "딕셔너리는 키와 값으로 이루어진 데이터 구조입니다. 각 키는 고유하며, 중복될 수 없습니다. 딕셔너리는 {}로 정의됩니다."
+        "딕셔너리는 키와 값으로 이루어진 데이터 구조입니다. 각 키는 고유하며, 중복될 수 없습니다. 딕셔너리는 {}로 정의됩니다.\n",
+        "\n",
+        "* 특징순서가 없는 데이터 구조\n",
+        "(파이썬 3.7부터는 삽입 순서 유지)\n",
+        "* 키는 유일하며 값은 변경 가능\n",
+        "* 주요 메서드get(), keys(), values(), items()"
       ],
       "metadata": {
         "id": "adER59P6B0MN"
@@ -1909,7 +1933,9 @@
       "cell_type": "markdown",
       "source": [
         "# 8. 함수  \n",
-        "파이썬 함수는 코드의 재사용성을 높이고, 복잡한 프로그램을 더 쉽게 관리할 수 있게 해주는 중요한 기능입니다. 함수는 하나의 기능을 독립적으로 수행하는 코드 블록으로, 파이썬에서는 def 키워드를 사용하여 함수를 정의합니다.\n",
+        "파이썬 함수는 코드의 재사용성을 높이고, 복잡한 프로그램을 더 쉽게 관리할 수 있게 해주는 중요한 기능입니다.   \n",
+        "함수는 하나의 기능을 독립적으로 수행하는 코드 블록으로, 파이썬에서는 def 키워드를 사용하여 함수를 정의합니다.  \n",
+        "\n",
         "매개변수를 통해 값을 함수로 전달할 수 있습니다."
       ],
       "metadata": {
@@ -1971,35 +1997,6 @@
           "name": "stdout",
           "text": [
             "5 + 3 = 8\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# 기본값을 가지는 매개변수\n",
-        "def greet(name=\"Guest\"):\n",
-        "    return f\"Hello, {name}!\"\n",
-        "\n",
-        "print(greet())  # 기본값 사용\n",
-        "print(greet(\"Alice\"))  # 매개변수에 값 전달\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "QwpL03NoClxT",
-        "outputId": "b0e8be0e-715d-4f85-f8d4-2679a1c07f1c"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Hello, Guest!\n",
-            "Hello, Alice!\n"
           ]
         }
       ]
@@ -2597,7 +2594,18 @@
         "\n",
         "객체 지향 프로그래밍(Object-Oriented Programming)은 프로그램을 객체(Object)로 구성하여 개발하는 프로그래밍 패러다임   \n",
         "클래스는 객체를 만들기 위한 청사진이며, 객체는 클래스의 인스턴스  \n",
-        "객체는 데이터를 포함한 속성(Attribute)과 기능(Behavior)을 수행하는 메서드(Method)를 가지고 있음"
+        "객체는 데이터를 포함한 속성(Attribute)과 기능(Behavior)을 수행하는 메서드(Method)를 가지고 있음\n",
+        "\n",
+        "\n",
+        "**객체 지향 프로그래밍의 주요 개념**\n",
+        "- 클래스 (Class): 객체를 생성하기 위한 템플릿(설계도)\n",
+        "- 객체 (Object): 클래스에서 정의한 데이터와 메서드를 가지는 실체\n",
+        "- 속성 (Attribute): 객체가 가지는 데이터(변수)\n",
+        "- 메서드 (Method): 객체가 수행할 수 있는 기능(함수)\n",
+        "- 상속 (Inheritance): 한 클래스가 다른 클래스의 속성과 메서드를 물려받는 것\n",
+        "- 다형성 (Polymorphism): 같은 이름의 메서드가 다른 객체에서 다르게 동작할 수 있는 것\n",
+        "- 캡슐화 (Encapsulation): 객체의 속성과 메서드를 외부에서 직접 접근하지 못하도록 보호하는 것\n",
+        "- 추상화 (Abstraction): 객체의 복잡한 내부 동작을 숨기고 필요한 부분만 노출하는 것"
       ],
       "metadata": {
         "id": "i_K4atYFB4qw"
@@ -2969,9 +2977,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6vvK6xT5Czbj",
-        "outputId": "8ad5060d-8391-4945-cd07-1759064003e8"
+        "outputId": "94b7a506-aa01-40f9-b5ab-9492c0443bc8"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -2986,7 +2994,11 @@
       "cell_type": "markdown",
       "source": [
         "클래스 내 메서드와 속성 관리  \n",
-        "클래스 내부에서는 다양한 종류의 메서드를 정의할 수 있습니다. 예를 들어, 정적 메서드, 클래스 메서드 등을 정의해보겠습니다."
+        "클래스 내부에서는 다양한 종류의 메서드를 정의할 수 있습니다. 예를 들어, 정적 메서드, 클래스 메서드 등을 정의해보겠습니다.\n",
+        "\n",
+        "* 인스턴스 메서드: 클래스의 인스턴스와 관련된 작업을 수행하며, self를 첫 번째 인자로 받습니다. 인스턴스 변수를 다룰 수 있습니다.\n",
+        "* 클래스 메서드: 클래스 자체와 관련된 작업을 수행하며, cls를 첫 번째 인자로 받습니다. 클래스 변수를 다룰 수 있습니다.\n",
+        "* 정적 메서드: 클래스나 인스턴스에 종속되지 않은 독립적인 메서드로, self나 cls를 받지 않습니다. 클래스와 관련된 부수적인 기능을 제공할 때 사용됩니다."
       ],
       "metadata": {
         "id": "wK3X1uxZSiLL"
